fixed timeline style on small screen

--- a/src/index.css
+++ b/src/index.css
@@ -78,7 +78,6 @@ code {
   padding: 30px;
 }
 
-
 .faq .body{
   position: absolute;
   width: 100%;
@@ -165,4 +164,17 @@ acordion{
   width: 100%;
   /* background-color: black !important; */
   margin-top: 20px !important
+}
+
+.timeline{
+  padding-top: 5%;
+  width: 75%;
+  padding-left: 25%;
+}
+
+@media (max-width: 600px)  {
+  .timeline{
+    width: 100%;
+    padding-left: 0%;
+  }
 }
